# pants-sample

./: BUILD  Dockerfile  pants.toml
docs/: issue.md
src/python/lib/lib_a/: BUILD  pyproject.toml  requirements.txt  sample.py  sample_test.py
src/python/lib/lib_a/utils/: array.py  log.py
src/python/main/main_a/: BUILD  Dockerfile  main.py
src/python/main/whisper/: BUILD  Dockerfile  main.py
